2008-12-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodmodule.vala:

	Do not generate invalid type check statements in coroutines

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valagasyncmodule.vala:

	Use closure struct to declare and initialize local variables in
	coroutines

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Do not use g_error_new for non-format strings, fixes bug 564961

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodememberaccessmodule.vala:

	Use closure struct to access local variables and parameters in
	coroutines

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusservermodule.vala:

	Do not generate property code if not necessary

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Update wording for error message when trying to duplicate
	non-reference counted object

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaformalparameter.vala:
	* vala/valagenieparser.vala:
	* vala/valaparser.vala:

	Remove support for deprecated syntax for construct parameters

	* tests/arrays.test:
	* tests/objects/test-029.test:

	Update syntax used in test cases

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* vala/valacodewriter.vala:

	Update syntax to use owned and unowned where appropriate

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:

	Remove support for deprecated syntax for property default values

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* vala/valamemberaccess.vala:

	Fix crash when using property prototype as value

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:
	* vala/valascanner.vala:
	* vala/valatokentype.vala:

	Add `owned' type modifier and `(owned)' cast to replace `#',
	add `unowned' type modifier to complement `weak' for non-reference
	counted objects.

	`#' will be deprecated in Vala 0.5.5

2008-12-18  Jürg Billeter  <j@bitron.ch>
